# apogee

./: .gitignore  Dockerfile  make_celery.py  pyproject.toml  start.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
migrations/versions/: 2a2d997b3a7c_.py  340c49be93ec_.py  478cd764b542_.py  492d08571cd8_.py  68f1549ad9aa_.py  6b47df420867_.py  76d7ab19c1bf_add_session_table.py  85865beb3543_.py  8c4988c0836b_.py  96926580d517_.py  cbaa6f375fcc_.py  dd528d904ea8_.py  e565f5e6539d_.py
src/apogee/: cache.py  cli.py  config.py  forms.py  github.py  tasks.py  util.py  web.py
src/apogee/model/: __init__.py  db.py  github.py  gitlab.py  record.py
src/apogee/repository/: __init__.py  shelve.py
src/apogee/templates/: base.html  commit.html  commit_detail.html  commit_note.html  commit_patches.html  commit_title.html  error.html  notifications.html  patch_form.html  pipeline.html  single_column.html  timeline.html  two_column.html
src/apogee/web/: __init__.py  auth.py  pulls.py  timeline.py  util.py
src/apogee/web/templates/: base.html  commit.html  commit_detail.html  commit_detail_menu.html  commit_note.html  commit_note_form.html  commit_title.html  commits.html  error.html  hero.html  index.html  login.html  macros.html  notifications.html  patch_form.html  pipeline.html  pull_list.html  pull_patches.html  pull_row.html  pull_title.html  pulls.html  run_pipeline.html  run_pipeline_inner.html  single_column.html  single_pull.html  single_pull_menu.html  sync_patches.html  timeline.html  two_column.html  update_object_counts.html  update_reference_trace.html  update_references.html  validation.html  validation_form.html  variable_table.html
src/output_checker/: config.py  forms.py  web.py
src/output_checker/model/: github.py  gitlab.py  record.py
src/output_checker/repository/: __init__.py  shelve.py
src/output_checker/templates/: add_validation.html  base.html  commit.html  commit_detail.html  commit_note_form.html  commit_patches.html  commit_title.html  commits.html  main.html  pipeline.html  run_pipeline.html  timeline.html  two_column.html  validations.html
