[tool.poetry]
name = "apogee"
version = "0.1.0"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
license = "MPLv2"
packages = [
    { include = "apogee", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
gidgethub = "^5.3.0"
aiohttp = "^3.8.5"
flask = {extras = ["async"], version = "^2.3.3"}
flask-session = "^0.5.0"
pydantic = "^2.2.1"
flask-wtf = "^1.1.1"
filelock = "^3.12.2"
gidgetlab = "^1.0.0"
cachetools = "^5.3.1"
humanize = "^4.8.0"
markdown = "^3.4.4"
github-flask = "^3.2.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
