[project]
name = "apogee"
version = "0.1.0"
description = ""
authors = [{name="Paul Gessinger", email="hello@paulgessinger.com"}]

requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "requests",
    "gidgethub",
    "aiohttp",
    "flask-session",
    "pydantic",
    "flask-wtf",
    "filelock",
    "gidgetlab",
    "cachetools",
    "humanize",
    "markdown",
    "flask-sqlalchemy",
    "flask-migrate",
    "sqlalchemy[mypy]>=2.0.20",
    "aiostream",
    "diskcache",
    "authlib",
    "fsspec",
    "sshfs",
    "psycopg2-binary",
    "celery",
    "redis",
    "gunicorn",
    "webdav4[fsspec]>=0.9.8",
    "async-lru",
    "flask[async]>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "celery-types>=0.22.0",
    "ruff>=0.9.2",
    "types-flask-migrate>=4.1.0.20250112",
]
